logs/bbarchivist_pipbuild.log
Removing old build directory
Removing old work directory
BUILD START: requests-2.7.0-py27_0
Fetching package metadata: ......

WARNING: conda-build appears to be out of date. You have version 1.13.0 but the
latest version is 1.14.0. Run

conda update -n root conda-build

to get the latest version.

Solving package specifications: .+ pip install requests
Collecting requests
  Downloading http://localhost/packages/2.7/r/requests/requests-2.7.0-py2.py3-none-any.whl (470kB)
Installing collected packages: requests
Successfully installed requests-2.7.0

The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1     
    pip:        7.0.3-py27_0 
    python:     2.7.10-0     
    readline:   6.2-2        
    setuptools: 18.0.1-py27_0
    sqlite:     3.8.4.1-1    
    system:     5.8-2        
    tk:         8.5.18-0     
    zlib:       1.2.8-0      

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  11%[sqlite              ]|###########                                       |  22%[system              ]|################                                  |  33%[tk                  ]|######################                            |  44%[zlib                ]|###########################                       |  55%[python              ]|#################################                 |  66%[setuptools          ]|######################################            |  77%[pip                 ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Copying /home/ubuntu/pypi-conda-builds/requests to /home/ubuntu/miniconda/conda-bld/work
Package: requests-2.7.0-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work
number of files: 165
Fixing permissions
Fixing permissions
BUILD END: requests-2.7.0-py27_0
# If you want to upload this package to binstar.org later, type:
#
# $ binstar upload /home/ubuntu/miniconda/conda-bld/linux-64/requests-2.7.0-py27_0.tar.bz2
#
# To have conda build upload to binstar automatically, use
# $ conda config --set binstar_upload yes

Removing old build directory
Removing old work directory
BUILD START: python-gnupg-0.3.7-py27_0
Fetching package metadata: ......

WARNING: conda-build appears to be out of date. You have version 1.13.0 but the
latest version is 1.14.0. Run

conda update -n root conda-build

to get the latest version.

Solving package specifications: .+ pip install python-gnupg
Collecting python-gnupg
  Downloading http://localhost/packages/source/p/python-gnupg/python-gnupg-0.3.7.tar.gz
Installing collected packages: python-gnupg
  Running setup.py install for python-gnupg
Successfully installed python-gnupg-0.3.7

The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1     
    pip:        7.0.3-py27_0 
    python:     2.7.10-0     
    readline:   6.2-2        
    setuptools: 18.0.1-py27_0
    sqlite:     3.8.4.1-1    
    system:     5.8-2        
    tk:         8.5.18-0     
    zlib:       1.2.8-0      

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  11%[sqlite              ]|###########                                       |  22%[system              ]|################                                  |  33%[tk                  ]|######################                            |  44%[zlib                ]|###########################                       |  55%[python              ]|#################################                 |  66%[setuptools          ]|######################################            |  77%[pip                 ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Copying /home/ubuntu/pypi-conda-builds/python-gnupg to /home/ubuntu/miniconda/conda-bld/work
Package: python-gnupg-0.3.7-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work
number of files: 7
Fixing permissions
Fixing permissions
BUILD END: python-gnupg-0.3.7-py27_0
# If you want to upload this package to binstar.org later, type:
#
# $ binstar upload /home/ubuntu/miniconda/conda-bld/linux-64/python-gnupg-0.3.7-py27_0.tar.bz2
#
# To have conda build upload to binstar automatically, use
# $ conda config --set binstar_upload yes

Removing old build directory
Removing old work directory
BUILD START: bbarchivist-1.8.1-py_0
Fetching package metadata: ......

WARNING: conda-build appears to be out of date. You have version 1.13.0 but the
latest version is 1.14.0. Run

conda update -n root conda-build

to get the latest version.

Solving package specifications: .+ pip install bbarchivist
Collecting bbarchivist
  Downloading http://localhost/packages/source/b/bbarchivist/bbarchivist-1.5.2.zip (8.6MB)
Requirement already satisfied (use --upgrade to upgrade): requests in /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages (from bbarchivist)
Requirement already satisfied (use --upgrade to upgrade): python-gnupg in /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages (from bbarchivist)
Installing collected packages: bbarchivist
  Running setup.py install for bbarchivist
Successfully installed bbarchivist-1.5.2
Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/bbarchivist/autolookup.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/bbarchivist/autolookup.py", line 32
    print("NOW SCANNING:", osversion, end="\r"),
                                         ^
SyntaxError: invalid syntax

Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/bbarchivist/hashwrapper.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/bbarchivist/hashwrapper.py", line 75
    print("ADLER32 ", end="")
                         ^
SyntaxError: invalid syntax


The following packages will be downloaded:

    package                    |            build
    ---------------------------|-----------------
    python-gnupg-0.3.7         |           py27_0          24 KB

The following NEW packages will be INSTALLED:

    openssl:      1.0.1k-1     
    pip:          7.0.3-py27_0 
    python:       2.7.10-0     
    python-gnupg: 0.3.7-py27_0 
    readline:     6.2-2        
    requests:     2.7.0-py27_0 
    setuptools:   18.0.1-py27_0
    sqlite:       3.8.4.1-1    
    system:       5.8-2        
    tk:           8.5.18-0     
    zlib:         1.2.8-0      

Fetching packages ...
python-gnupg-0   0% |                              | ETA:  --:--:--   0.00  B/spython-gnupg-0  67% |#####################          | ETA:  0:00:00  34.21 MB/spython-gnupg-0 100% |###############################| ETA:  0:00:00  36.39 MB/spython-gnupg-0 100% |###############################| Time: 0:00:00  26.54 MB/s
Extracting packages ...
[                    ]|                                                  |   0%[python-gnupg        ]|                                                  |   0%[      COMPLETE      ]|##################################################| 100%
Linking packages ...
[      COMPLETE      ]|                                                  |   0%[openssl             ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|####                                              |   9%[sqlite              ]|#########                                         |  18%[system              ]|#############                                     |  27%[tk                  ]|##################                                |  36%[zlib                ]|######################                            |  45%[python              ]|###########################                       |  54%[python-gnupg        ]|###############################                   |  63%[requests            ]|####################################              |  72%[setuptools          ]|########################################          |  81%[pip                 ]|#############################################     |  90%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Copying /home/ubuntu/pypi-conda-builds/bbarchivist to /home/ubuntu/miniconda/conda-bld/work
Package: bbarchivist-1.8.1-py_0
source tree in: /home/ubuntu/miniconda/conda-bld/work
compiling .pyc files...
Command failed: /home/ubuntu/miniconda/envs/_build/bin/python -Wi /home/ubuntu/miniconda/envs/_build/lib/python2.7/compileall.py -q -x port_v3 /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
Package search: {'_pypi_ordering': False, 'version': '1.8.1', 'name': 'bbarchivist', 'summary': 'BlackBerry 10 autoloader tools'}
Creating standard recipe for bbarchivist-1.8.1
Converting recipe in /home/ubuntu/pypi-conda-builds/bbarchivist
package = bbarchivist
   dependencies = [u'requests', u'python-gnupg']
Creating standard recipe for requests
Converting recipe in /home/ubuntu/pypi-conda-builds/requests
package = requests
   dependencies = []
Building conda package for requests
Creating standard recipe for python-gnupg
Converting recipe in /home/ubuntu/pypi-conda-builds/python-gnupg
package = python-gnupg
   dependencies = []
Building conda package for python-gnupg
Building conda package for bbarchivist
